<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
    android:id="@+id/nav">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_issues"
            android:icon="@drawable/ic_issues"
            android:title="@string/menu_issues" />
    </group>

    <group android:checkableBehavior="single"
    android:id="@+id/my">
    <item
            android:id="@+id/nav_my_repos"
            android:icon="@drawable/ic_my_repos"
            android:title="@string/menu_my_repos" />
    <item
            android:id="@+id/nav_starred_repos"
            android:icon="@drawable/ic_starred_repos"
            android:title="@string/menu_starred_repos" />
    <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/menu_bookmarks" />
</group>

    <group android:checkableBehavior="single"
           android:id="@+id/other">
        <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search"
                android:title="@string/menu_search" />
        <item
                android:id="@+id/nav_trace"
                android:icon="@drawable/ic_trace"
                android:title="@string/menu_trace" />
        <item
                android:id="@+id/nav_trending_repos"
                android:icon="@drawable/ic_trending_repos"
                android:title="@string/menu_trending_repos" />
        <item
                android:id="@+id/nav_repo_collections"
                android:icon="@drawable/ic_repo_collections"
                android:title="@string/menu_repo_collections" />
        <item
                android:id="@+id/nav_featured_topics"
                android:icon="@drawable/ic_featured_topics"
                android:title="@string/menu_featured_topics" />
        <item
                android:id="@+id/nav_global_news"
                android:icon="@drawable/ic_global_news"
                android:title="@string/menu_global_news" />
    </group>
    <group android:checkableBehavior="single"
           android:id="@+id/about">
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about" />
    </group>
</menu>
